matplotlib - classroom assignments

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 .idea/inspectionProfiles/profiles_settings.xml
 Practise/Pandas_Learning/21 Sep/.ipynb_checkpoints/Dataframes-checkpoint.ipynb
 Practise/Pandas_Learning/21 Sep/Classroom Sessions/.ipynb_checkpoints/Classroom_1-checkpoint.ipynb
+Practise/Matplotlib/.ipynb_checkpoints/Classroom session 1-checkpoint.ipynb
+Practise/Matplotlib/.ipynb_checkpoints/Classroom session 2-checkpoint.ipynb
+Practise/Matplotlib/.ipynb_checkpoints/Classroom session 3-checkpoint.ipynb
+Practise/Matplotlib/.ipynb_checkpoints/Classroom session 4-checkpoint.ipynb
+Practise/Matplotlib/test.png
