minmax and robust

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ Practise/Matplotlib/.ipynb_checkpoints/Classroom session 2-checkpoint.ipynb
 Practise/Matplotlib/.ipynb_checkpoints/Classroom session 3-checkpoint.ipynb
 Practise/Matplotlib/.ipynb_checkpoints/Classroom session 4-checkpoint.ipynb
 Practise/Matplotlib/test.png
-.learning/
+learning/
