updated weekly assignment

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Practise/Matplotlib/.ipynb_checkpoints/Classroom session 3-checkpoint.ipynb
 Practise/Matplotlib/.ipynb_checkpoints/Classroom session 4-checkpoint.ipynb
 Practise/Matplotlib/test.png
 learning/
+.DS_Store
